--- a/src/app/scss/variables.scss
+++ b/src/app/scss/variables.scss
@@ -3,4 +3,10 @@ $friends-max-height: 290px;
 
 $primary: #3F51B5;
 $danger: #F44336;
+$light-blue: #D7F2FF;
 $grey: #F7F8FB;
+$grey2: #F2F6F9;
+$grey3: #323232;
+$grey4: #696B6E;
+
+$box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
