--- a/src/app/dashboard/chat/components/textbox/textbox.component.scss
+++ b/src/app/dashboard/chat/components/textbox/textbox.component.scss
@@ -25,4 +25,14 @@
   emoji-mart {
     align-self: flex-end;
   }
+
+  .emoji-icon {
+    border-radius: 50%;
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      transition: .4s;
+    }
+  }
 }
