--- a/src/app/dashboard/chat/components/textbox/textbox.component.html
+++ b/src/app/dashboard/chat/components/textbox/textbox.component.html
@@ -1,23 +1,26 @@
 <div class="textbox">
-  <mat-icon color="primary">message</mat-icon>
+  <emoji-mart class="emoji-mart" perLine="10" set="emojione" (emojiSelect)="onAddEmoji($event)" *ngIf="showEmojiPicker"></emoji-mart>
+  <div class="textbox__wrapper">
+    <mat-icon class="emoji-icon"  color="primary" (click)="toggleEmojiPicker()">{{ showEmojiPicker ? 'keyboard_arrow_down' : 'mood' }}</mat-icon>
 
-  <mat-form-field class="chat-input">
-    <mat-label>Type a message</mat-label>
-    <textarea
-      [maxlength]="maxLength"
-      class="scrollbar"
-      (keyDown.enter)="onSendMessage($event)"
-      [(ngModel)]="message"
-      matInput
-      cdkTextareaAutosize
-      #field
-      cdkAutosizeMinRows="1"
-      cdkAutosizeMaxRows="5">
-    </textarea>
-    <mat-hint [class.red]="field.value.length === maxLength" align="end">{{ field.value.length }}/{{ maxLength }}</mat-hint>
-  </mat-form-field>
+    <mat-form-field class="chat-input">
+      <mat-label>Type a message</mat-label>
+      <textarea
+        [maxlength]="maxLength"
+        class="scrollbar"
+        (keyDown.enter)="onSendMessage($event)"
+        [(ngModel)]="message"
+        matInput
+        cdkTextareaAutosize
+        #field
+        cdkAutosizeMinRows="1"
+        cdkAutosizeMaxRows="5">
+      </textarea>
+      <mat-hint [class.red]="field.value.length === maxLength" align="end">{{ field.value.length }}/{{ maxLength }}</mat-hint>
+    </mat-form-field>
 
-  <button mat-icon-button (click)="onSendMessage()">
-    <mat-icon color="primary">send</mat-icon>
-  </button>
+    <button mat-icon-button (click)="onSendMessage()">
+      <mat-icon color="primary">send</mat-icon>
+    </button>
+  </div>
 </div>
