--- a/src/app/dashboard/chat/components/textbox/textbox.component.scss
+++ b/src/app/dashboard/chat/components/textbox/textbox.component.scss
@@ -3,6 +3,13 @@
 .textbox {
   align-items: center;
   display: flex;
+  flex-direction: column;
+
+  &__wrapper {
+    align-items: center;
+    display: flex;
+    width: 100%;
+  }
 
   mat-form-field {
     margin-left: 5px;
@@ -12,6 +19,20 @@
   mat-hint {
     &.red {
       color: $danger;
+    }
+  }
+
+  emoji-mart {
+    align-self: flex-end;
+  }
+
+  .emoji-icon {
+    border-radius: 50%;
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      transition: .4s;
     }
   }
 }
