add information module

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,5 +7,8 @@
     <div fxFlex="50%" class="dashboard__item dashboard__item--chat">
       <app-chat></app-chat>
     </div>
+    <div fxFlex="25%" class="dashboard__item">
+      <app-information></app-information>
+    </div>
   </div>
 </div>
