--- a/src/app/scss/global.scss
+++ b/src/app/scss/global.scss
@@ -27,6 +27,12 @@ body {
     }
   }
 
+  .messages {
+    .mat-list-item-content {
+      justify-content: space-between;
+    }
+  }
+
   .mat-expansion-indicator::after {
     color: $primary;
   }
