add drag and drop functionality

--- a/src/app/dashboard/chat/components/textbox/textbox.component.scss
+++ b/src/app/dashboard/chat/components/textbox/textbox.component.scss
@@ -26,6 +26,14 @@
     align-self: flex-end;
   }
 
+  .spinner {
+    margin: 0 5px;
+
+    mat-spinner {
+      zoom: 0.3;
+    }
+  }
+
   .emoji-icon {
     border-radius: 50%;
     cursor: pointer;
