add basic group functionality

--- a/src/app/dashboard/user-actions/components/friends/friends.component.scss
+++ b/src/app/dashboard/user-actions/components/friends/friends.component.scss
@@ -5,7 +5,7 @@
   overflow-y: auto;
 
   &__list {
-    max-height: $friends-max-height;
+    max-height: $panel-max-height;
 
     &__item {
       transition: .3s;
