--- a/src/app/dashboard/information/information.component.html
+++ b/src/app/dashboard/information/information.component.html
@@ -23,4 +23,13 @@
     </ng-template>
   </mat-expansion-panel>
 
+  <mat-expansion-panel expanded="true">
+    <mat-expansion-panel-header>
+      Notifications
+    </mat-expansion-panel-header>
+    <ng-template matExpansionPanelContent>
+      <app-notifications [user$]="friend$"></app-notifications>
+    </ng-template>
+  </mat-expansion-panel>
+
 </mat-accordion>
