--- a/src/app/dashboard/navbar/navbar.component.html
+++ b/src/app/dashboard/navbar/navbar.component.html
@@ -1,6 +1,13 @@
 <div class="navbar">
   <mat-toolbar color="primary" class="navbar__toolbar">
     <span>Messenger</span>
-    <mat-icon (click)="logout()" class="navbar__logout" aria-label="Logout">power_settings_new</mat-icon>
+    <div class="navbar__buttons-wrapper no-drag">
+      <mat-icon (click)="logout()" class="navbar__button" aria-label="Logout">power_settings_new</mat-icon>
+      <div *ngIf="showButtons" class="navbar__buttons-wrapper">
+        <mat-icon class="navbar__button ml-15">minimize</mat-icon>
+        <mat-icon class="navbar__button">crop_din</mat-icon>
+        <mat-icon (click)="close()" class="navbar__button">close</mat-icon>
+      </div>
+    </div>
   </mat-toolbar>
 </div>
