--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -2,7 +2,7 @@
   <div fxFlex="50%" class="auth__image-wrapper">
     <img class="auth__image" src="assets/img/auth.jpg" alt="Image">
   </div>
-  <div class="auth__content">
+  <div class="auth__content no-drag">
     <router-outlet></router-outlet>
   </div>
 </div>
